<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="aplications.buttomaplications.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gas_calculate"
                android:id="@+id/btn_gas"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/child_age"
                android:id="@+id/btn_age"/>
            
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scholl_score"
                android:id="@+id/btn_score"/>

        </LinearLayout>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
