<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="aplications.buttomaplications.ChildAge">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etx_childName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/child_name" />

            <EditText
                android:id="@+id/etx_childAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/child_age" />

            <Button
                android:id="@+id/btn_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/category"/>

            <TextView
                android:id="@+id/txv_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
