<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="aplications.buttomaplications.GasCalculate">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etx_gasolina"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/valor_gasolina" />

            <EditText
                android:id="@+id/etx_alcool"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/valor_lcool"/>

            <Button
                android:id="@+id/btn_valorCalculate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calcular"/>
            
            <TextView
                android:id="@+id/txv_resultadoGas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
